web primera version

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Actividad 6.1</title>
+<link href="css/misestilos.css">
+</head>
+<body>
+<h1>Control de versiones de un sitio web mediante Github y despliegue de AWS
+</h1>
+<h2>Hecho por: Raquel Martínez</h2>
+<a href="contacto.html">Pagina de Contacto</a>
+</body>
+</html>
